deployment/06-celery.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cooking-assistant-celery-worker
  namespace: __NAMESPACE__
  labels:
    app: cooking-assistant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cooking-assistant
      tier: celery-worker
  template:
    metadata:
      labels:
        app: cooking-assistant
        tier: celery-worker
    spec:
      containers:
      - image: __CONTAINER_IMAGE__
        imagePullPolicy: Always
        name: cooking-assistant-celery-worker
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cooking-assistant-celery-beat
  namespace: __NAMESPACE__
  labels:
    app: cooking-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cooking-assistant
      tier: celery-beat
  template:
    metadata:
      labels:
        app: cooking-assistant
        tier: celery-beat
    spec:
      containers:
      - image: __CONTAINER_IMAGE__
        imagePullPolicy: Always
        name: cooking-assistant-celery-beat
