deployment/05-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: cooking-assistant-rabbitmq
  namespace: __NAMESPACE__
  labels:
    app: cooking-assistant
spec:
  ports:
    - port: 5672
  selector:
    app: cooking-assistant
    tier: rabbitmq
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cooking-assistant-rabbitmq
  namespace: __NAMESPACE__
  labels:
    app: cooking-assistant
spec:
  selector:
    matchLabels:
      app: cooking-assistant
      tier: rabbitmq
  template:
    metadata:
      labels:
        app: cooking-assistant
        tier: rabbitmq
    spec:
      containers:
      - name: cooking-assistant-rabbitmq
        image: rabbitmq:3.7
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 5672
        volumeMounts:
          - mountPath: /var/lib/rabbitmq
            name: rabbitmq-data
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: cooking-assistant-rabbitmq
