deployment/07-frontend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cooking-assistant-frontend
  namespace: __NAMESPACE__
  labels:
    app: cooking-assistant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cooking-assistant
      tier: frontend
  template:
    metadata:
      labels:
        app: cooking-assistant
        tier: frontend
    spec:
      containers:
      - image: __CONTAINER_IMAGE__
        imagePullPolicy: Always
        name: cooking-assistant-webui
        readinessProbe:
          httpGet:
            path: /health/
            port: 8080
            scheme: HTTP
            httpHeaders:
            - name: Host
              value: __FQDN__
          initialDelaySeconds: 30
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /health/
            port: 8080
            scheme: HTTP
            httpHeaders:
            - name: Host
              value: __FQDN__
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cooking-assistant
  namespace: __NAMESPACE__
  labels:
    app: cooking-assistant
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: cooking-assistant
    tier: frontend
