deployment/08-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: "__CLUSTER_ISSUER__"
  name: cooking-assistant
  namespace: __NAMESPACE__
spec:
  tls:
  - hosts:
    - __FQDN__
    secretName: __FQDN__-tls
  rules:
  - host: __FQDN__
    http:
      paths:
        - path: /
          backend:
            serviceName: cooking-assistant
            servicePort: 80
